--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -33,13 +33,19 @@
   margin: 0;
   display: inline-flex;
   margin-top: 21px;
+}
 
+.classification {
+    float: right;
+    top: 0px;
+    margin-top: -30px;
+    margin-right: 55px;
 }
 
 .heading {
   display: inline-flex;
   margin-right: 22%;
-  margin-left: 43%;
+  margin-left: 40%;
 }
 
 .headingWrapper {
@@ -62,18 +68,18 @@
 }
 
 .trending-news {
-  margin-left: 650px;
+  margin-left: 535px;
   display: inline-flex;
 }
 
 .side-bar-elements {
-  height: 95px;
+  height: 75px;
   text-align: center !important;
 }
 
 .dot {
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
@@ -82,8 +88,8 @@
 }
 
 .dot-red {
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
   background-color: rgb(255, 0, 0);
   border-radius: 50%;
   display: inline-block;
@@ -92,8 +98,8 @@
 }
 
 .dot-blue {
-  height: 25px;
-  width: 25px;
+  height: 20px;
+  width: 20px;
   background-color: rgb(0, 0, 255);
   border-radius: 50%;
   display: inline-block;
@@ -106,11 +112,26 @@
   margin-top: 24px;
   margin-right: 5px;
   font-size: 20px;
+  vertical-align: bottom;
 }
 
 .curly-brace {
   font-size: 50px;
   margin-top: 0px;
+}
+
+.menuButton {
+  margin-right: 20px,
+}
+
+.hide {
+  display: 'none',
+}
+
+.hamburger {
+  margin-top: 90px !important;
+  margin-left: 0px !important;
+  position: absolute !important;
 }
 
 @keyframes App-logo-spin {
